--- a/backend/web/package.json
+++ b/backend/web/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@svgdotjs/svg.js": "^3.2.0",
+    "p5": "^1.8.0",
     "paper": "^0.12.17"
   }
 }
