Moved web folder to main folder
* Added some shit that isn't on github
* Future release will get rid of go backend for express.js backend(for
  exporting svg to pdf, jpg etc.)

--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@svgdotjs/svg.js": "^3.2.0",
     "p5": "^1.8.0",
-    "paper": "^0.12.17"
+    "paper": "^0.12.17",
+    "sortablejs": "^1.15.2",
+    "svelte-routing": "^2.13.0"
   }
 }
