--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@svgdotjs/svg.js": "^3.2.0",
+    "flatted": "^3.3.1",
     "p5": "^1.8.0",
     "paper": "^0.12.17",
     "sortablejs": "^1.15.2",
