--- a/praca/bib.yaml
+++ b/praca/bib.yaml
@@ -35,6 +35,32 @@ slp-made:
     date: 2024-11-05
   date: 1957
 
+powerpoint-release:
+  type: Misc
+  title: "Forethought: the First 18 Months"
+  author: Bob Gaskins
+  url:
+    value: https://www.robertgaskins.com/powerpoint-history/documents/gaskins-history-of-forethought-1987-may-25.pdf
+    date: 2024-11-08
+  page-range: 6-6
+
+powerpoint-dominance:
+  type: Article
+  title: Use and Evaluation of Presentation Software 
+  author:
+    - Meinald T. Thielsch
+    - Isabel Perabo
+  url:
+    value: http://www.thielsch.org/download/paper/Thielsch_Perabo_2012.pdf
+    date: 2024-11-08
+  date: 2012-05
+  page-range: 112-129
+  parent:
+    type: Periodical
+    title: Technical Communication (59)
+
+
+
 text-autowrap:
   type: Web
   title: Auto-wrapped text
